# DiplomaThesis-PerfectMatchingIndex

./: 4poles.cpp  4poles.hpp  CMakeLists.txt  README.md  SATperfectmatching.cpp  SATperfectmatching.h  VF3.cpp  VF3.h  binaryfunctions.cpp  binaryfunctions.hpp  disjuction.cpp  disjuction.h  graph.cpp  kempeswitches.cpp  kempeswitches.h  main.cpp  perfectmatching.cpp  perfectmatching.h  permutations.cpp  permutations.h  tests.cpp  tests.hpp
include/: MatchingEngine.hpp  Options.hpp
